--- a/WebApplication1/Views/Event/Index.cshtml
+++ b/WebApplication1/Views/Event/Index.cshtml
@@ -30,7 +30,11 @@ else
                         </p>
 
                         <div class="mt-auto d-flex justify-content-between align-items-center">
-                            <a asp-controller="Event" asp-action="Buy" asp-route-eventId="@item.Id" class="btn btn-primary">Buy</a>
+                            <form method="post" action="/Event/Buy">
+                                <input type="hidden" name="eventId" value="@item.Id" />
+                                <label>Quantity: </label> <input type="number" name="qty" class="form-control" />
+                                <input type="submit" class="btn btn-primary" value="Buy" />
+                            </form>
                             <small class="text-muted">ID: @item.Id</small>
                         </div>
                     </div>
